--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,10 @@ before_script:
   # Enable GitLab registry
   - docker login -u gitlab-ci-token -p ${CI_BUILD_TOKEN} ${REGISTRY}
 
+.force_build_template: &force_build_definition
+  only:
+    - /^.*-force-build$/
+
 .build_template: &build_definition
   stage: build
   script:
@@ -29,6 +33,7 @@ before_script:
 
 'alpine 3.5 1.10.0':
   <<: *build_definition
+  <<: *force_build_definition
   variables:
     OS: 'alpine_3.5'
     TAG: '1.10.0'
@@ -38,6 +43,7 @@ before_script:
 
 'alpine 3.5 1.10.2':
   <<: *build_definition
+  <<: *force_build_definition
   variables:
     OS: 'alpine_3.5'
     TAG: '1.10.2'
@@ -47,6 +53,7 @@ before_script:
 
 'alpine 3.5 1.10.3':
   <<: *build_definition
+  <<: *force_build_definition
   variables:
     OS: 'alpine_3.5'
     TAG: '1.10.3'
@@ -56,6 +63,7 @@ before_script:
 
 'alpine 3.5 1.10.4':
   <<: *build_definition
+  <<: *force_build_definition
   variables:
     OS: 'alpine_3.5'
     TAG: '1.10.4'
@@ -65,6 +73,7 @@ before_script:
 
 'alpine 3.5 1.x':
   <<: *build_definition
+  <<: *force_build_definition
   variables:
     OS: 'alpine_3.5'
     TAG: '1'
@@ -76,6 +85,7 @@ before_script:
 
 'alpine 3.5 2.1.1':
   <<: *build_definition
+  <<: *force_build_definition
   variables:
     OS: 'alpine_3.5'
     TAG: '2.1.1'
@@ -85,6 +95,7 @@ before_script:
 
 'alpine 3.5 2.1.2':
   <<: *build_definition
+  <<: *force_build_definition
   variables:
     OS: 'alpine_3.5'
     TAG: '2.1.2'
@@ -94,6 +105,7 @@ before_script:
 
 'alpine 3.5 2.1.3':
   <<: *build_definition
+  <<: *force_build_definition
   variables:
     OS: 'alpine_3.5'
     TAG: '2.1.3'
@@ -103,6 +115,7 @@ before_script:
 
 'alpine 3.5 2.1':
   <<: *build_definition
+  <<: *force_build_definition
   variables:
     OS: 'alpine_3.5'
     TAG: '2.1'
@@ -114,6 +127,7 @@ before_script:
 
 'alpine 3.5 2.2.0':
   <<: *build_definition
+  <<: *force_build_definition
   variables:
     OS: 'alpine_3.5'
     TAG: '2.2.0'
@@ -123,6 +137,7 @@ before_script:
 
 'alpine 3.5 2.2.1':
   <<: *build_definition
+  <<: *force_build_definition
   variables:
     OS: 'alpine_3.5'
     TAG: '2.2.1'
@@ -132,6 +147,7 @@ before_script:
 
 'alpine 3.5 2.2.2':
   <<: *build_definition
+  <<: *force_build_definition
   variables:
     OS: 'alpine_3.5'
     TAG: '2.2.2'
@@ -141,6 +157,7 @@ before_script:
 
 'alpine 3.5 2.2':
   <<: *build_definition
+  <<: *force_build_definition
   variables:
     OS: 'alpine_3.5'
     TAG: '2.2'
@@ -152,6 +169,7 @@ before_script:
 
 'alpine 3.5 2.3.1':
   <<: *build_definition
+  <<: *force_build_definition
   variables:
     OS: 'alpine_3.5'
     TAG: '2.3.1'
@@ -161,6 +179,7 @@ before_script:
 
 'alpine 3.5 2.3':
   <<: *build_definition
+  <<: *force_build_definition
   variables:
     OS: 'alpine_3.5'
     TAG: '2.3'
@@ -172,6 +191,7 @@ before_script:
 
 'alpine 3.5 2.x':
   <<: *build_definition
+  <<: *force_build_definition
   variables:
     OS: 'alpine_3.5'
     TAG: '2'
@@ -188,6 +208,7 @@ before_script:
 
 'centos 7 1.x':
   <<: *build_definition
+  <<: *force_build_definition
   variables:
     OS: 'centos_7'
     TAG: '1.x-centos7'
@@ -199,6 +220,7 @@ before_script:
 
 'centos 7 2.x':
   <<: *build_definition
+  <<: *force_build_definition
   variables:
     OS: 'centos_7'
     TAG: '2.x-centos7'
