Create new versions and roll the old
Rolled ahead old branches versions:
  alpine_3.5_1.x
  alpine_3.5_2.1
  alpine_3.5_2.2
  alpine_3.5_2.3
  alpine_3.5_2.x

Created new versions:
  alpine_3.5_1.10.1
  alpine_3.5_1.10.5
  alpine_3.5_1.10.6
  alpine_3.5_2.1.0
  alpine_3.5_2.2.3
  alpine_3.5_2.3.0
  alpine_3.5_2.3.2
  alpine_3.5_2.4
  alpine_3.5_2.4.0
  alpine_3.5_2.4.1
  alpine_3.5_2.5.0

Added information in README.md file how to push images.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,6 +41,16 @@ before_script:
     DVER: '1.10.3'
     PORT: 5101
 
+'alpine 3.5 1.10.1':
+  <<: *build_definition
+  <<: *force_build_definition
+  variables:
+    OS: 'alpine_3.5'
+    TAG: '1.10.1'
+    VER: '1.10.1'
+    DVER: '1.10.3'
+    PORT: 5101
+
 'alpine 3.5 1.10.2':
   <<: *build_definition
   <<: *force_build_definition
@@ -71,6 +81,26 @@ before_script:
     DVER: '1.x'
     PORT: 5104
 
+'alpine 3.5 1.10.5':
+  <<: *build_definition
+  <<: *force_build_definition
+  variables:
+    OS: 'alpine_3.5'
+    TAG: '1.10.5'
+    VER: '1.10.5'
+    DVER: '1.x'
+    PORT: 5105
+
+'alpine 3.5 1.10.6':
+  <<: *build_definition
+  <<: *force_build_definition
+  variables:
+    OS: 'alpine_3.5'
+    TAG: '1.10.6'
+    VER: '1.10.6'
+    DVER: '1.x'
+    PORT: 5106
+
 'alpine 3.5 1.x':
   <<: *build_definition
   <<: *force_build_definition
@@ -82,6 +112,16 @@ before_script:
     PORT: 5100
 
 # Tarantool branch 2.1
+
+'alpine 3.5 2.1.0':
+  <<: *build_definition
+  <<: *force_build_definition
+  variables:
+    OS: 'alpine_3.5'
+    TAG: '2.1.0'
+    VER: '2.1.0'
+    DVER: '2.2'
+    PORT: 5211
 
 'alpine 3.5 2.1.1':
   <<: *build_definition
@@ -155,6 +195,16 @@ before_script:
     DVER: '2.x'
     PORT: 5222
 
+'alpine 3.5 2.2.3':
+  <<: *build_definition
+  <<: *force_build_definition
+  variables:
+    OS: 'alpine_3.5'
+    TAG: '2.2.3'
+    VER: '2.2.3'
+    DVER: '2.x'
+    PORT: 5223
+
 'alpine 3.5 2.2':
   <<: *build_definition
   <<: *force_build_definition
@@ -167,6 +217,16 @@ before_script:
 
 # Tarantool branch 2.3
 
+'alpine 3.5 2.3.0':
+  <<: *build_definition
+  <<: *force_build_definition
+  variables:
+    OS: 'alpine_3.5'
+    TAG: '2.3.0'
+    VER: '2.3.0'
+    DVER: '2.2'
+    PORT: 5231
+
 'alpine 3.5 2.3.1':
   <<: *build_definition
   <<: *force_build_definition
@@ -174,6 +234,16 @@ before_script:
     OS: 'alpine_3.5'
     TAG: '2.3.1'
     VER: '2.3.1'
+    DVER: '2.x'
+    PORT: 5231
+
+'alpine 3.5 2.3.2':
+  <<: *build_definition
+  <<: *force_build_definition
+  variables:
+    OS: 'alpine_3.5'
+    TAG: '2.3.2'
+    VER: '2.3.2'
     DVER: '2.x'
     PORT: 5231
 
@@ -187,7 +257,49 @@ before_script:
     DVER: '2.x'
     PORT: 5230
 
+# Tarantool branch 2.4
+
+'alpine 3.5 2.4.0':
+  <<: *build_definition
+  <<: *force_build_definition
+  variables:
+    OS: 'alpine_3.5'
+    TAG: '2.4.0'
+    VER: '2.4.0'
+    DVER: '2.x'
+    PORT: 5241
+
+'alpine 3.5 2.4.1':
+  <<: *build_definition
+  <<: *force_build_definition
+  variables:
+    OS: 'alpine_3.5'
+    TAG: '2.4.1'
+    VER: '2.4.1'
+    DVER: '2.x'
+    PORT: 5241
+
+'alpine 3.5 2.4':
+  <<: *build_definition
+  <<: *force_build_definition
+  variables:
+    OS: 'alpine_3.5'
+    TAG: '2.4'
+    VER: '2.4'
+    DVER: '2.x'
+    PORT: 5240
+
 # Tarantool branch master
+
+'alpine 3.5 2.5.0':
+  <<: *build_definition
+  <<: *force_build_definition
+  variables:
+    OS: 'alpine_3.5'
+    TAG: '2.5.0'
+    VER: '2.5.0'
+    DVER: '2.x'
+    PORT: 5251
 
 'alpine 3.5 2.x':
   <<: *build_definition
