--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,7 @@ before_script:
     DIST: '3.5'
     TAG: '1.10.0'
     VER: '1.10.0'
-    DOCKERFILE_NAME_SUFFIX: '1.10.3'
+    DOCKERFILE_NAME_SUFFIX: '1.x'
     PORT: 5101
 
 'alpine 3.5 1.10.1':
@@ -50,7 +50,7 @@ before_script:
     DIST: '3.5'
     TAG: '1.10.1'
     VER: '1.10.1'
-    DOCKERFILE_NAME_SUFFIX: '1.10.3'
+    DOCKERFILE_NAME_SUFFIX: '1.x'
     PORT: 5101
 
 'alpine 3.5 1.10.2':
@@ -60,7 +60,7 @@ before_script:
     DIST: '3.5'
     TAG: '1.10.2'
     VER: '1.10.2'
-    DOCKERFILE_NAME_SUFFIX: '1.10.3'
+    DOCKERFILE_NAME_SUFFIX: '1.x'
     PORT: 5102
 
 'alpine 3.5 1.10.3':
@@ -70,7 +70,7 @@ before_script:
     DIST: '3.5'
     TAG: '1.10.3'
     VER: '1.10.3'
-    DOCKERFILE_NAME_SUFFIX: '1.10.3'
+    DOCKERFILE_NAME_SUFFIX: '1.x'
     PORT: 5103
 
 'alpine 3.9 1.10.4':
@@ -122,7 +122,7 @@ before_script:
     DIST: '3.5'
     TAG: '2.1.0'
     VER: '2.1.0'
-    DOCKERFILE_NAME_SUFFIX: '2.2'
+    DOCKERFILE_NAME_SUFFIX: '2.x'
     PORT: 5211
 
 'alpine 3.5 2.1.1':
@@ -132,7 +132,7 @@ before_script:
     DIST: '3.5'
     TAG: '2.1.1'
     VER: '2.1.1'
-    DOCKERFILE_NAME_SUFFIX: '2.2'
+    DOCKERFILE_NAME_SUFFIX: '2.x'
     PORT: 5211
 
 'alpine 3.5 2.1.2':
@@ -142,7 +142,7 @@ before_script:
     DIST: '3.5'
     TAG: '2.1.2'
     VER: '2.1.2'
-    DOCKERFILE_NAME_SUFFIX: '2.2'
+    DOCKERFILE_NAME_SUFFIX: '2.x'
     PORT: 5212
 
 'alpine 3.9 2.1.3':
@@ -174,7 +174,7 @@ before_script:
     DIST: '3.5'
     TAG: '2.2.0'
     VER: '2.2.0'
-    DOCKERFILE_NAME_SUFFIX: '2.2'
+    DOCKERFILE_NAME_SUFFIX: '2.x'
     PORT: 5220
 
 'alpine 3.5 2.2.1':
@@ -184,7 +184,7 @@ before_script:
     DIST: '3.5'
     TAG: '2.2.1'
     VER: '2.2.1'
-    DOCKERFILE_NAME_SUFFIX: '2.2'
+    DOCKERFILE_NAME_SUFFIX: '2.x'
     PORT: 5221
 
 'alpine 3.9 2.2.2':
@@ -226,7 +226,7 @@ before_script:
     DIST: '3.5'
     TAG: '2.3.0'
     VER: '2.3.0'
-    DOCKERFILE_NAME_SUFFIX: '2.2'
+    DOCKERFILE_NAME_SUFFIX: '2.x'
     PORT: 5231
 
 'alpine 3.9 2.3.1':
