--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,6 +35,7 @@ before_script:
 
 'alpine 3.5 1.10.0':
   <<: *build_definition
+  when: manual
   variables:
     OS: 'alpine'
     DIST: '3.5'
@@ -45,6 +46,7 @@ before_script:
 
 'alpine 3.5 1.10.1':
   <<: *build_definition
+  when: manual
   variables:
     OS: 'alpine'
     DIST: '3.5'
@@ -55,6 +57,7 @@ before_script:
 
 'alpine 3.5 1.10.2':
   <<: *build_definition
+  when: manual
   variables:
     OS: 'alpine'
     DIST: '3.5'
@@ -65,6 +68,7 @@ before_script:
 
 'alpine 3.5 1.10.3':
   <<: *build_definition
+  when: manual
   variables:
     OS: 'alpine'
     DIST: '3.5'
@@ -75,6 +79,7 @@ before_script:
 
 'alpine 3.9 1.10.4':
   <<: *build_definition
+  when: manual
   variables:
     OS: 'alpine'
     DIST: '3.9'
@@ -86,6 +91,7 @@ before_script:
 
 'alpine 3.9 1.10.5':
   <<: *build_definition
+  when: manual
   variables:
     OS: 'alpine'
     DIST: '3.9'
@@ -97,6 +103,7 @@ before_script:
 
 'alpine 3.9 1.10.6':
   <<: *build_definition
+  when: manual
   variables:
     OS: 'alpine'
     DIST: '3.9'
@@ -108,12 +115,24 @@ before_script:
 
 'alpine 3.9 1.10.7':
   <<: *build_definition
+  when: manual
   variables:
     OS: 'alpine'
     DIST: '3.9'
     TAG: '1.10.7'
     VER: '1.10.7'
     PORT: 5107
+    ROCKS_INSTALLER: 'luarocks'
+
+'alpine 3.9 1.10.8':
+  <<: *build_definition
+  when: manual
+  variables:
+    OS: 'alpine'
+    DIST: '3.9'
+    TAG: '1.10.8'
+    VER: '1.10.8'
+    PORT: 5108
     ROCKS_INSTALLER: 'luarocks'
 
 'alpine 3.9 1.x':
@@ -130,6 +149,7 @@ before_script:
 
 'alpine 3.5 2.1.0':
   <<: *build_definition
+  when: manual
   variables:
     OS: 'alpine'
     DIST: '3.5'
@@ -140,6 +160,7 @@ before_script:
 
 'alpine 3.5 2.1.1':
   <<: *build_definition
+  when: manual
   variables:
     OS: 'alpine'
     DIST: '3.5'
@@ -150,6 +171,7 @@ before_script:
 
 'alpine 3.5 2.1.2':
   <<: *build_definition
+  when: manual
   variables:
     OS: 'alpine'
     DIST: '3.5'
@@ -160,6 +182,7 @@ before_script:
 
 'alpine 3.9 2.1.3':
   <<: *build_definition
+  when: manual
   variables:
     OS: 'alpine'
     DIST: '3.9'
@@ -184,6 +207,7 @@ before_script:
 
 'alpine 3.5 2.2.0':
   <<: *build_definition
+  when: manual
   variables:
     OS: 'alpine'
     DIST: '3.5'
@@ -194,6 +218,7 @@ before_script:
 
 'alpine 3.5 2.2.1':
   <<: *build_definition
+  when: manual
   variables:
     OS: 'alpine'
     DIST: '3.5'
@@ -203,6 +228,7 @@ before_script:
 
 'alpine 3.9 2.2.2':
   <<: *build_definition
+  when: manual
   variables:
     OS: 'alpine'
     DIST: '3.9'
@@ -212,6 +238,7 @@ before_script:
 
 'alpine 3.9 2.2.3':
   <<: *build_definition
+  when: manual
   variables:
     OS: 'alpine'
     DIST: '3.9'
@@ -232,6 +259,7 @@ before_script:
 
 'alpine 3.5 2.3.0':
   <<: *build_definition
+  when: manual
   variables:
     OS: 'alpine'
     DIST: '3.5'
@@ -241,6 +269,7 @@ before_script:
 
 'alpine 3.9 2.3.1':
   <<: *build_definition
+  when: manual
   variables:
     OS: 'alpine'
     DIST: '3.9'
@@ -250,6 +279,7 @@ before_script:
 
 'alpine 3.9 2.3.2':
   <<: *build_definition
+  when: manual
   variables:
     OS: 'alpine'
     DIST: '3.9'
@@ -259,6 +289,7 @@ before_script:
 
 'alpine 3.9 2.3.3':
   <<: *build_definition
+  when: manual
   variables:
     OS: 'alpine'
     DIST: '3.9'
@@ -279,6 +310,7 @@ before_script:
 
 'alpine 3.9 2.4.0':
   <<: *build_definition
+  when: manual
   variables:
     OS: 'alpine'
     DIST: '3.9'
@@ -288,6 +320,7 @@ before_script:
 
 'alpine 3.9 2.4.1':
   <<: *build_definition
+  when: manual
   variables:
     OS: 'alpine'
     DIST: '3.9'
@@ -297,12 +330,23 @@ before_script:
 
 'alpine 3.9 2.4.2':
   <<: *build_definition
+  when: manual
   variables:
     OS: 'alpine'
     DIST: '3.9'
     TAG: '2.4.2'
     VER: '2.4.2'
     PORT: 5242
+
+'alpine 3.9 2.4.3':
+  <<: *build_definition
+  when: manual
+  variables:
+    OS: 'alpine'
+    DIST: '3.9'
+    TAG: '2.4.3'
+    VER: '2.4.3'
+    PORT: 5243
 
 'alpine 3.9 2.4':
   <<: *build_definition
@@ -317,6 +361,7 @@ before_script:
 
 'alpine 3.9 2.5.0':
   <<: *build_definition
+  when: manual
   variables:
     OS: 'alpine'
     DIST: '3.9'
@@ -326,12 +371,23 @@ before_script:
 
 'alpine 3.9 2.5.1':
   <<: *build_definition
+  when: manual
   variables:
     OS: 'alpine'
     DIST: '3.9'
     TAG: '2.5.1'
     VER: '2.5.1'
     PORT: 5252
+
+'alpine 3.9 2.5.2':
+  <<: *build_definition
+  when: manual
+  variables:
+    OS: 'alpine'
+    DIST: '3.9'
+    TAG: '2.5.2'
+    VER: '2.5.2'
+    PORT: 5253
 
 'alpine 3.9 2.5':
   <<: *build_definition
@@ -342,16 +398,48 @@ before_script:
     VER: '2.5'
     PORT: 5250
 
-# Tarantool branch master
+# Tarantool branch 2.6
 
 'alpine 3.9 2.6.0':
   <<: *build_definition
+  when: manual
   variables:
     OS: 'alpine'
     DIST: '3.9'
     TAG: '2.6.0'
     VER: '2.6.0'
     PORT: 5260
+
+'alpine 3.9 2.6.1':
+  <<: *build_definition
+  when: manual
+  variables:
+    OS: 'alpine'
+    DIST: '3.9'
+    TAG: '2.6.1'
+    VER: '2.6.1'
+    PORT: 5261
+
+'alpine 3.9 2.6':
+  <<: *build_definition
+  variables:
+    OS: 'alpine'
+    DIST: '3.9'
+    TAG: '2.6'
+    VER: '2.6'
+    PORT: 5269
+
+# Tarantool branch master
+
+'alpine 3.9 2.7.0':
+  <<: *build_definition
+  when: manual
+  variables:
+    OS: 'alpine'
+    DIST: '3.9'
+    TAG: '2.7.0'
+    VER: '2.7.0'
+    PORT: 5270
 
 'alpine 3.9 2.x':
   <<: *build_definition
